tests/fixtures/invalid/bytes_add_str.py
# Cannot add Bytes and Str
x: bytes = b"hello" + "hello"
